# ecrust

./: .gitignore  AGENT_CONTEXT.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/ecrust/: __init__.py  _api_compat.py
scripts/: benchmark_hrrr_value_phases.py  benchmark_parallel_hrrr.py  benchmark_workflows.py  compare_real_world.py
src/: compat.rs  grib.rs  grib2_compat.rs  grib_cache.rs  lib.rs
tests/: __init__.py  real_world_support.py  test_dropin_surface.py  test_ecrust.py  test_real_world_parity.py
