[package]
name = "_ecrust"
version = "0.1.0"
edition = "2021"
description = "Rust-native drop-in Python import replacement for eccodes"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/FahrenheitResearch/ecrust"
repository = "https://github.com/FahrenheitResearch/ecrust"
publish = false

[lib]
name = "_ecrust"
crate-type = ["cdylib"]

[features]
default = []
mimalloc = ["dep:mimalloc"]
system-allocator = []

[dependencies]
chrono = { version = "0.4", default-features = false }
dicom-toolkit-jpeg2000 = { version = "0.4.0", default-features = false, features = ["std"] }
mimalloc = { version = "0.1", default-features = false, optional = true }
numpy = "0.23"
pyo3 = { version = "0.23", features = ["extension-module"] }
rust-aec = "0.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[target.'cfg(windows)'.dependencies]
mimalloc_windows = { package = "mimalloc", version = "0.1", default-features = false }
